tests/baselines/reference/chainedAssignment3.errors.txt
tests/cases/compiler/chainedAssignment3.ts(18,1): error TS2741: Property 'value' is missing in type 'A' but required in type 'B'.
tests/cases/compiler/chainedAssignment3.ts(19,5): error TS2322: Type 'A' is not assignable to type 'B'.


==== tests/cases/compiler/chainedAssignment3.ts (2 errors) ====
    class A {
        id: number;
    }
    
    class B extends A {
        value: string;
    }
    
    var a: A;
    var b: B;
    a = b = null;
    a = b = new B();
    b = a = new B();
    
    a.id = b.value = null;
    
    // error cases
    b = a = new A();
    ~
!!! error TS2741: Property 'value' is missing in type 'A' but required in type 'B'.
!!! related TS2728 tests/cases/compiler/chainedAssignment3.ts:6:5: 'value' is declared here.
    a = b = new A();
        ~
!!! error TS2322: Type '{|A|0|}' is not assignable to type '{|B|1|}'.
!!! annotated symbol 0 tests/cases/compiler/chainedAssignment3.ts:1:7
!!! annotated symbol 1 tests/cases/compiler/chainedAssignment3.ts:5:7
    
    
    